<resources>
    <string name="app_name">ECE496_CC</string>
    <string name="connect">Connect</string>
    <string name="status">Connection Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="connection">Connect To Devices</string>
    <string name="version">Version:</string>
    <string name="undefined">unknown</string>
    <string name="calib_q">How does this picture make you feel?</string>
    <string name="scan_nodevicesfound">No peripherals found</string>
    <string name="scan_devicesheadertitle">PERIPHERALS</string>
    <string name="dialog_error_no_ble">Bluetooth Low Energy not supported</string>
    <string name="dialog_error_no_bluetooth">Bluetooth not available</string>
    <string name="action_settings">Settings</string>
    <!-- Common -->
    <string name="dialog_ok">Ok</string>
    <string name="settingsaction_confirmenablewifi_title">Wifi status</string>
    <string name="settingsaction_confirmenablewifi_message">Wifi was previously disabled to improve Bluetooth connections. Would you like to enable it again?</string>
    <string name="scan_unexpecteddisconnect">Peripheral disconnected</string>
    <string name="dialog_error_nolocationservices_requiredforscan_marshmallow">Android 6 requires that Location Services are enabled to scan bluetooth peripherals.\nPlease, go to settings and enable it to start scanning peripherals</string>
    <string name="scan_connecting">Connecting ...</string>
    <string name="scan_scanbutton_scanning">Scanning...</string>
    <string name="scan_device_localname">Local Name</string>
    <string name="scan_device_address">Address</string>
    <string name="scan_device_rssi_notavailable">N/A</string>
    <string name="scan_device_connect">Connect</string>
    <string name="scan_device_uuid">UUID</string>
    <string name="scan_device_services">Service UUIDs</string>
    <string name="scan_device_txpower">TX Power Level</string>
    <string name="scan_device_beacon_manufacturer">Manufacturer</string>
    <string name="scan_device_beacon_major">Major</string>
    <string name="scan_device_beacon_minor">Minor</string>
    <string name="scan_device_uribeacon_uri">Uri</string>
    <string name="scan_tag_id">Id</string>
    <string name="scan_scanbutton_scan">Scan for peripherals</string>

</resources>
