<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.asahoo264.ece496_cc.ConnectActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/logo1"
        android:gravity="top"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:alpha="0.5"
        android:src="@drawable/bt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dp"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="0dp"
            android:weightSum="2">
        <TextView
            android:id="@+id/fragonetitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Connect To Muse"
            android:textSize="20sp"
            android:layout_gravity="fill_horizontal"
            android:typeface="monospace"/>

        <Spinner
            android:id="@+id/muses_spinner"
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <Button
                android:id="@+id/refresh"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/refresh"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/connect"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/connect"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/disconnect"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/disconnect"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/con_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/undefined"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/horseshoe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="ELECTRODES: TP9, Fp1, Fp2, TP10"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:weightSum="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/left_electrode"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="LEFT"
                android:textSize="12sp"
                android:textAlignment="center"
                android:background="@drawable/horseshoe_bg"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/lc_electrode"
                android:layout_weight="1"
                android:text="LEFT-CENTER"
                android:textSize="10sp"
                android:padding="10dp"
                android:background="@drawable/horseshoe_bg"
                android:textAlignment="center"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rc_electrode"
                android:layout_weight="1"
                android:text="RIGHT-CENTER"
                android:textSize="10sp"
                android:padding="10dp"
                android:background="@drawable/horseshoe_bg"
                android:textAlignment="center"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/right_electrode"
                android:layout_weight="1"
                android:text="RIGHT"
                android:textSize="12sp"
                android:padding="10dp"
                android:background="@drawable/horseshoe_bg"
                android:textAlignment="center"
                android:textStyle="bold"/>

        </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="0dp"
            android:weightSum="2" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="back"
                android:layout_gravity="bottom|left"
                android:id="@+id/back"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
